--- a/styles.css
+++ b/styles.css
@@ -51,5 +51,9 @@ button {
   width: 110px;
   font-size: 12px;
   text-align: center;
+  cursor: pointer;
 }
 
+.hex-box:hover {
+  font-weight:bold;
+}
