--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
   font-family: "Sora", serif;
   width: 550px;
   height: 550px;
@@ -6,15 +7,17 @@ html, body {
   padding: 0;
 }
 
-button, select, input[type="color"] {
+button,
+select,
+input[type="color"] {
   font-family: "Sora", serif;
   height: 42px;
-  background-color: #FFFFFF;
-  border: 1px solid #D1D5DB;
+  background-color: #ffffff;
+  border: 1px solid #d1d5db;
   cursor: pointer;
 }
 
-input[type="color"]{
+input[type="color"] {
   width: 60px;
 }
 
@@ -38,17 +41,17 @@ button {
 .color-palette {
   display: flex;
   align-items: center;
-  height: 100%;
 }
 
 .color-column {
   width: 110px;
   height: 450px;
-  transition: transform 0.5s ease-in-out;
+  transition: transform 0.8s ease-in-out;
+  cursor: pointer;
 }
 
 .color-column:hover {
-  transform: scale(1.02);
+  transform: scale(1.03);
 }
 
 .hex-box {
@@ -59,5 +62,5 @@ button {
 }
 
 .hex-box:hover {
-  font-weight:bold;
+  font-weight: bold;
 }
