--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,11 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 html,
 body {
   font-family: "Sora", serif;
@@ -56,6 +64,7 @@ button {
 
 .hex-box {
   width: 110px;
+  padding-top: 15px;
   font-size: 12px;
   text-align: center;
   cursor: pointer;
