Optimised for mobile screens and changed layout to grid

--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
 html,
 body {
   font-family: "Sora", serif;
-  width: 550px;
+  max-width: 550px;
   height: 550px;
   margin: 0 auto;
   padding: 0;
@@ -25,51 +25,41 @@ input[type="color"] {
   cursor: pointer;
 }
 
-input[type="color"] {
-  width: 60px;
-}
-
-select {
-  width: 300px;
-  padding-left: 10px;
+.color-container {
+  display: grid;
+  grid-template-columns: 50px 1fr;
+  column-gap: 1em;
+  row-gap: 0.5em;
+  align-items: center;
+  padding: 1em;
+  margin: 0.5em 0;
 }
 
 button {
   font-size: 12px;
-  width: 123px;
-}
-
-.color-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 90px;
+  width: 50%;
+  grid-column: 2;
+  grid-row: 2;
 }
 
 .color-palette {
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
   align-items: center;
+  gap: 1em;
 }
 
 .color-column {
-  width: 110px;
-  height: 450px;
+  width: 100%;
+  height: 150px;
   transition: transform 0.8s ease-in-out;
   cursor: pointer;
 }
 
-.color-column:hover {
-  transform: scale(1.03);
-}
-
 .hex-box {
-  width: 110px;
-  padding-top: 15px;
+  width: 100%;
+  padding-top: 5px;
   font-size: 12px;
   text-align: center;
   cursor: pointer;
-}
-
-.hex-box:hover {
-  font-weight: bold;
 }
