--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@
 html,
 body {
   font-family: "Sora", serif;
+  color: black;
   max-width: 550px;
   height: 550px;
   margin: 0 auto;
@@ -29,6 +30,21 @@ input[type="color"] {
   border-radius: 0;
 }
 
+input[type="color"] {
+  width: 60px;
+}
+
+select {
+  padding-left: 10px;
+}
+
+button {
+  font-size: 12px;
+  width: 50%;
+  grid-column: 2;
+  grid-row: 2;
+}
+
 .color-container {
   display: grid;
   grid-template-columns: 50px 1fr;
@@ -37,13 +53,6 @@ input[type="color"] {
   align-items: center;
   padding: 1em;
   margin: 0.5em 0;
-}
-
-button {
-  font-size: 12px;
-  width: 50%;
-  grid-column: 2;
-  grid-row: 2;
 }
 
 .color-palette {
