--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,7 @@ input[type="color"] {
 }
 
 select {
+  color: black;
   padding-left: 10px;
 }
 
@@ -43,10 +44,9 @@ select > option {
 }
 
 button {
-  background-color: #626467;
-  color: #ffffff;
+  color: #000000;
   font-size: 12px;
-  width: 30%;
+  width: 50%;
   grid-column: 2;
   grid-row: 2;
 }
