--- a/styles.css
+++ b/styles.css
@@ -44,21 +44,19 @@ select > option {
 }
 
 button {
-  color: #000000;
   font-size: 12px;
-  width: 50%;
-  grid-column: 2;
-  grid-row: 2;
+  width: 100%;/
 }
 
 .color-container {
   display: grid;
-  grid-template-columns: 50px 1fr;
-  column-gap: 1em;
-  row-gap: 0.5em;
+  grid-template-columns: 60px 1fr 50px;
+  gap: 5px;
+  /* column-gap: 1em;
+  row-gap: 0.5em; */
   align-items: center;
   padding: 1em;
-  margin: 0.5em 0;
+  margin: 0.5em 0 0 0;
 }
 
 .color-palette {
@@ -66,6 +64,7 @@ button {
   grid-template-columns: 1fr 1fr;
   align-items: center;
   gap: 1em;
+  padding: 1em;
 }
 
 .color-column {
